--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.1.3",
     "react": "^16.6.3",
+    "react-bootstrap": "^1.0.0-beta.3",
     "react-dom": "^16.6.3",
+    "react-helmet": "^5.2.0",
     "react-scripts": "2.1.1"
   },
   "scripts": {
