--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "react-bootstrap": "^1.0.0-beta.3",
     "react-dom": "^16.6.3",
     "react-helmet": "^5.2.0",
-    "react-scripts": "2.1.1"
+    "react-scripts": "^2.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
